# A-Very-Simple-Pattern-Recognizer

./: CMakeLists.txt  README.md  main.cpp
Sources/FileManagement/: rw_files.cpp  rw_files.h
Sources/Filters/: filters.cpp  filters.h
Sources/PatternOccurrencesFinder/: pattern_occurrences_finder.cpp  pattern_occurrences_finder.h
Sources/Structs/: structs.h
